#128 Spring Boot を 1.4.4 → 1.4.5 にバージョンアップしました

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
+group 'ksbysample'
+version '1.4.5-RELEASE'
+
 buildscript {
     ext {
-        springBootVersion = '1.4.4.RELEASE'
+        springBootVersion = '1.4.5.RELEASE'
     }
     repositories {
         jcenter()
@@ -12,7 +15,7 @@ buildscript {
         // for Error Prone ( http://errorprone.info/ )
         classpath("net.ltgt.gradle:gradle-errorprone-plugin:0.0.9")
         // for Grgit
-        classpath("org.ajoberstar:grgit:1.8.0")
+        classpath("org.ajoberstar:grgit:1.9.0")
         // Gradle Download Task
         classpath("de.undercouch:gradle-download-task:3.2.0")
     }
@@ -36,17 +39,13 @@ task wrapper(type: Wrapper) {
 }
 
 [compileJava, compileTestGroovy, compileTestJava]*.options*.compilerArgs = ['-Xlint:all,-options,-processing,-path']
+compileJava.options.compilerArgs += ['-Xep:RemoveUnusedImports:WARN']
 
 // for Doma 2
 // JavaクラスとSQLファイルの出力先ディレクトリを同じにする
 processResources.destinationDir = compileJava.destinationDir
 // コンパイルより前にSQLファイルを出力先ディレクトリにコピーするために依存関係を逆転する
 compileJava.dependsOn processResources
-
-jar {
-    baseName = 'ksbysample-webapp-lending'
-    version = '1.1.0-RELEASE'
-}
 
 idea {
     module {
@@ -62,7 +61,7 @@ configurations {
 
 checkstyle {
     configFile = file("${rootProject.projectDir}/config/checkstyle/google_checks.xml")
-    toolVersion = '7.5.1'
+    toolVersion = '7.6.1'
     sourceSets = [project.sourceSets.main]
 }
 
@@ -87,7 +86,7 @@ repositories {
 
 dependencyManagement {
     imports {
-        mavenBom("io.spring.platform:platform-bom:Athens-SR3") {
+        mavenBom("io.spring.platform:platform-bom:Athens-SR4") {
             bomProperty 'commons-lang3.version', '3.5'
             bomProperty 'guava.version', '21.0'
         }
@@ -101,9 +100,9 @@ bootRepackage {
 
 dependencies {
     def jdbcDriver = "org.postgresql:postgresql:9.4.1212"
-    def spockVersion = "1.1-groovy-2.4-rc-3"
-    def domaVersion = "2.15.0"
-    def lombokVersion = "1.16.12"
+    def spockVersion = "1.1-groovy-2.4-rc-4"
+    def domaVersion = "2.16.0"
+    def lombokVersion = "1.16.16"
     def errorproneVersion = "2.0.15"
 
     // dependency-management-plugin によりバージョン番号が自動で設定されるもの
@@ -133,7 +132,6 @@ dependencies {
 
     // dependency-management-plugin によりバージョン番号が自動で設定されないもの、あるいは最新バージョンを指定したいもの
     runtime("${jdbcDriver}")
-    compile("org.seasar.doma:doma:${domaVersion}")
     compile("org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16")
     compile("org.simpleframework:simple-xml:2.7.1")
     compile("com.univocity:univocity-parsers:2.3.1")
@@ -147,13 +145,14 @@ dependencies {
     testCompile("org.spockframework:spock-spring:${spockVersion}") {
         exclude module: "groovy-all"
     }
-    testCompile("com.google.code.findbugs:jsr305:3.0.1")
+    testCompile("com.google.code.findbugs:jsr305:3.0.2")
 
     // for lombok
     compileOnly("org.projectlombok:lombok:${lombokVersion}")
     testCompileOnly("org.projectlombok:lombok:${lombokVersion}")
 
-    // for Doma-Gen
+    // for Doma
+    compile("org.seasar.doma:doma:${domaVersion}")
     domaGenRuntime("org.seasar.doma:doma-gen:${domaVersion}")
     domaGenRuntime("${jdbcDriver}")
 
