--- a/src/main/resources/application-unittest.properties
+++ b/src/main/resources/application-unittest.properties
@@ -1,7 +1,4 @@
-spring.datasource.tomcat.url=jdbc:postgresql://localhost/ksbylending
-spring.datasource.tomcat.username=ksbylending_user
-spring.datasource.tomcat.password=xxxxxxxx
-spring.datasource.tomcat.driverClassName=org.postgresql.Driver
+spring.autoconfigure.exclude=com.integralblue.log4jdbc.spring.Log4jdbcAutoConfiguration
 
 spring.mail.host=localhost
 spring.mail.port=25
