--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 doma.dialect=org.seasar.doma.jdbc.dialect.PostgresDialect
 
+spring.datasource.tomcat.url=jdbc:postgresql://localhost/ksbylending
+spring.datasource.tomcat.username=ksbylending_user
+spring.datasource.tomcat.password=xxxxxxxx
+spring.datasource.tomcat.driverClassName=org.postgresql.Driver
+
 spring.session.store-type=redis
 
 spring.freemarker.cache=true
