--- a/src/main/resources/application-product.properties
+++ b/src/main/resources/application-product.properties
@@ -1,10 +1,7 @@
 server.tomcat.basedir=C:/webapps/ksbysample-webapp-lending
 logging.file=${server.tomcat.basedir}/logs/ksbysample-webapp-lending.log
 
-spring.datasource.tomcat.url=jdbc:postgresql://localhost/ksbylending
-spring.datasource.tomcat.username=ksbylending_user
-spring.datasource.tomcat.password=xxxxxxxx
-spring.datasource.tomcat.driverClassName=org.postgresql.Driver
+spring.autoconfigure.exclude=com.integralblue.log4jdbc.spring.Log4jdbcAutoConfiguration
 
 spring.mail.host=localhost
 spring.mail.port=25
