#128 spring.datasource.tomcat.～ の設定項目で url, username, password, driverClassName 以外で設定した方がよさそうなパラメータを追加しました

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,18 @@ spring.datasource.tomcat.url=jdbc:postgresql://localhost/ksbylending
 spring.datasource.tomcat.username=ksbylending_user
 spring.datasource.tomcat.password=xxxxxxxx
 spring.datasource.tomcat.driverClassName=org.postgresql.Driver
+spring.datasource.tomcat.initialSize=1
+spring.datasource.tomcat.maxActive=100
+spring.datasource.tomcat.maxIdle=100
+spring.datasource.tomcat.minIdle=1
+spring.datasource.tomcat.testOnBorrow=true
+spring.datasource.tomcat.validationQuery=select 1
+spring.datasource.tomcat.validationQueryTimeout=5
+spring.datasource.tomcat.removeAbandoned=true
+spring.datasource.tomcat.removeAbandonedTimeout=30
+# spring.datasource.jmx-enabled は spring.datasource.tomcat.jmx-enabled と書かないこと。
+# spring.datasource.tomcat.jmx-enabled だと機能しない。
+spring.datasource.jmx-enabled=true
 
 spring.session.store-type=redis
 
