#128 Tomcat JDBC Connection Pool の SlowQueryReport  intercepter を利用して5秒以上かかる SQL を slow-query.log に出力するようにしました

--- a/src/main/resources/application-product.properties
+++ b/src/main/resources/application-product.properties
@@ -1,5 +1,6 @@
 server.tomcat.basedir=C:/webapps/ksbysample-webapp-lending
 logging.file=${server.tomcat.basedir}/logs/ksbysample-webapp-lending.log
+slowquery.logging.file=${server.tomcat.basedir}/logs/slow-query.log
 
 spring.autoconfigure.exclude=com.integralblue.log4jdbc.spring.Log4jdbcAutoConfiguration
 spring.datasource.tomcat.initialSize=10
