--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.datasource.tomcat.validationQuery=select 1
 spring.datasource.tomcat.validationQueryTimeout=5
 spring.datasource.tomcat.removeAbandoned=true
 spring.datasource.tomcat.removeAbandonedTimeout=30
+spring.datasource.tomcat.jdbc-interceptors=SlowQueryReport(threshold=5000)
 # spring.datasource.jmx-enabled は spring.datasource.tomcat.jmx-enabled と書かないこと。
 # spring.datasource.tomcat.jmx-enabled だと機能しない。
 spring.datasource.jmx-enabled=true
