#128 FreeMarker のテンプレートで数値→文字列変換が発生する時にカンマ区切りで出力されないようにしました

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,7 @@ spring.datasource.jmx-enabled=true
 spring.session.store-type=redis
 
 spring.freemarker.cache=true
+spring.freemarker.settings.number_format=computer
 spring.freemarker.charset=UTF-8
 spring.freemarker.enabled=false
 spring.freemarker.prefer-file-system-access=false
