#128 jar ファイルから起動した時に ValuesHelper クラスのコンストラクタで Values インターフェースの実装クラスが１つもロードされない問題を解消しました

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,5 @@ spring.freemarker.settings.number_format=computer
 spring.freemarker.charset=UTF-8
 spring.freemarker.enabled=false
 spring.freemarker.prefer-file-system-access=false
+
+valueshelper.classpath.prefix=
