--- a/src/main/resources/application-product.properties
+++ b/src/main/resources/application-product.properties
@@ -16,3 +16,5 @@ spring.rabbitmq.port=5672
 
 spring.redis.sentinel.master=mymaster
 spring.redis.sentinel.nodes=localhost:6381,localhost:6382,localhost:6383
+
+valueshelper.classpath.prefix=BOOT-INF.classes.
