#130 WARN ログ `[THYMELEAF][main] Template Mode 'HTML5' is deprecated. Using Template Mode 'HTML' instead.` が出力されないようにするために spring.thymeleaf.mode=HTML の設定を追加しました

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,4 +26,6 @@ spring.freemarker.charset=UTF-8
 spring.freemarker.enabled=false
 spring.freemarker.prefer-file-system-access=false
 
+spring.thymeleaf.mode=HTML
+
 valueshelper.classpath.prefix=
