#130 logback-develop.xml, logback-unittest.xml, logback-product.xml の設定を logback-spring.xml と application.properties に移動してファイルを削除しました

--- a/src/main/resources/application-develop.properties
+++ b/src/main/resources/application-develop.properties
@@ -6,3 +6,13 @@ spring.rabbitmq.port=5672
 
 spring.redis.sentinel.master=mymaster
 spring.redis.sentinel.nodes=localhost:6381,localhost:6382,localhost:6383
+
+# Spring MVC
+logging.level.org.springframework.web=DEBUG
+# log4jdbc-log4j2
+logging.level.jdbc.sqlonly=DEBUG
+logging.level.jdbc.sqltiming=INFO
+logging.level.jdbc.audit=INFO
+logging.level.jdbc.resultset=ERROR
+logging.level.jdbc.resultsettable=ERROR
+logging.level.jdbc.connection=DEBUG
