--- a/src/main/resources/application-unittest.properties
+++ b/src/main/resources/application-unittest.properties
@@ -8,3 +8,5 @@ spring.rabbitmq.port=5672
 
 spring.redis.sentinel.master=mymaster
 spring.redis.sentinel.nodes=localhost:6381,localhost:6382,localhost:6383
+
+logging.level.root=OFF
