--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,6 @@ spring.freemarker.prefer-file-system-access=false
 spring.thymeleaf.mode=HTML
 
 valueshelper.classpath.prefix=
+
+logging.level.root=INFO
+logging.level.org.seasar.doma=ERROR
