#132 コネクションプーリングのライブラリを Spring Boot 2.0 からデフォルトとなった Tomcat connection Pool → HikariCP に変更しました

--- a/src/main/resources/application-product.properties
+++ b/src/main/resources/application-product.properties
@@ -1,12 +1,8 @@
-server.tomcat.basedir=C:/webapps/ksbysample-webapp-lending
+server.tomcat.basedir=D:/webapps/ksbysample-webapp-lending
 logging.file=${server.tomcat.basedir}/logs/ksbysample-webapp-lending.log
 slowquery.logging.file=${server.tomcat.basedir}/logs/slow-query.log
 
 spring.autoconfigure.exclude=com.integralblue.log4jdbc.spring.Log4jdbcAutoConfiguration
-spring.datasource.tomcat.initialSize=10
-spring.datasource.tomcat.maxActive=100
-spring.datasource.tomcat.maxIdle=100
-spring.datasource.tomcat.minIdle=10
 
 spring.mail.host=localhost
 spring.mail.port=25
