--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 doma.dialect=org.seasar.doma.jdbc.dialect.PostgresDialect
 
+management.endpoints.web.exposure.include=health,info,loggers,prometheus
+
 spring.datasource.hikari.jdbc-url=jdbc:postgresql://localhost/ksbylending
 spring.datasource.hikari.username=ksbylending_user
 spring.datasource.hikari.password=xxxxxxxx
