--- a/docker/prometheus/prometheus.yml
+++ b/docker/prometheus/prometheus.yml
@@ -21,3 +21,5 @@ scrape_configs:
   # Docker で起動した Prometheus からローカルPCで起動している Spring Boot のアプリケーション
   # にアクセスするので、localhost ではなくローカルPCに割り当てられているIPアドレスを設定する
   - targets: ['172.23.136.33:8080']
+    labels:
+      application: 'lending'
